| Bug #44671 | InnoDB: standard Monitor missing TRANSACTIONS section | ||
|---|---|---|---|
| Submitted: | 5 May 2009 15:13 | Modified: | 10 Sep 2009 17:22 |
| Reporter: | Paul DuBois | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: InnoDB | Severity: | S3 (Non-critical) |
| Version: | 5.4.0 | OS: | Any |
| Assigned to: | Kelly Long | Target Version: | 5.4.4 |
| Triage: | Triaged: D2 (Serious) | ||
[5 May 2009 15:13]
Paul DuBois
[5 May 2009 16:02]
Miguel Solorzano
Monitor output in 5.4
Attachment: innodb_monitor_output.txt (text/plain), 9.66 KiB.
[5 May 2009 16:04]
Miguel Solorzano
Thank you for the bug report. Verified as described.
[15 Jul 2009 21:40]
Kelly Long
Possible patch for bug 44671-missing transaction status in show innodb status
Attachment: mysql-bug44671.patch (application/octet-stream, text), 809 bytes.
[21 Jul 2009 20:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/79131 2855 Kelly Long 2009-07-21 Fix Bug#44671 Part of the 'show status' code was erronously removed when the google patch was applied. This patch puts it back.
[10 Sep 2009 17:22]
Paul DuBois
Noted in 5.4.2 changelog. During incorporation of a Google patch to SHOW ENGINE INNODB STATUS in MySQL 5.4.0, the TRANSACTIONS section of the output was inadvertently omitted. This section has been restored.
[16 Sep 2009 5:52]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/83400 2846 Alexander Nozdrin 2009-09-16 [merge] Null-merge of mysql-trunk revno:2855: ===== committer: Kelly Long <k.long@sun.com> branch nick: mysql-5.1-performance-version timestamp: Tue 2009-07-21 14:10:09 -0600 message: Fix Bug#44671 Part of the 'show status' code was erronously removed when the google patch was applied. This patch puts it back. ===== This patch is not compatible with 6.0.
[16 Sep 2009 6:45]
Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090916063112-8hjmu6wkxfx5qxf4) (version source revid:alik@sun.com-20090916055020-7vc22khb1umsvkjm) (merge vers: 5.4.4-alpha) (pib:11)
