Fix Bug#44671 Part of the 'show status' code was erronously removed when the google 	patch was applied.  This patch puts it back.